mobile sideways view was distorted, fixed in these changes

--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -32,7 +32,7 @@
   display: flex;
   justify-content: flex-end;
 }
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 420px), screen and (max-height: 375px) {
   #main__canvas_container {
     display: none;
   }
@@ -42,7 +42,7 @@
   margin: 80px 0 0 6%;
   width: 650px;
 }
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 420px), screen and (max-height: 375px) {
   .title_container {
     width: 100%;
     margin: 20px 0 0 0;
@@ -59,7 +59,7 @@
   z-index: 1;
   background-image: linear-gradient(to right, #ff9b49 20%, #ff6905 80%);
 }
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 420px), screen and (max-height: 375px) {
   .color_span {
     width: 80%;
     height: 1.5em;
@@ -79,7 +79,7 @@
   z-index: 2;
   background-color: transparent;
 }
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 420px), screen and (max-height: 375px) {
   .title_name {
     margin: 0;
     font-size: 6em;
@@ -93,7 +93,7 @@
   font-family: "Roboto", sans-serif;
   text-transform: uppercase;
 }
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 420px), screen and (max-height: 375px) {
   .title_decription {
     margin: 0;
     font-size: 30px;
@@ -105,7 +105,7 @@
   display: flex;
   justify-content: center;
 }
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 420px), screen and (max-height: 375px) {
   .skills_container {
     display: block;
     margin: 150px 0 80px 0;
@@ -127,7 +127,7 @@
   text-transform: uppercase;
   margin-top: 4px;
 }
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 420px), screen and (max-height: 375px) {
   .skill_container__category {
     text-align: center;
     margin: 70px 0;
@@ -137,7 +137,7 @@
 .skill_container__category__description {
   font-family: "Bebas Neue";
 }
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 420px), screen and (max-height: 375px) {
   .skill_container__category__description {
     background: -webkit-linear-gradient(to right, #ff9b49 20%, #ff6905 80%);
     background: -moz-linear-gradient(to right, #ff9b49 20%, #ff6905 80%);
@@ -156,7 +156,7 @@
   margin: auto;
   margin-top: 100px;
 }
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 420px), screen and (max-height: 375px) {
   .projects_container {
     margin: 0 20px;
     text-align: center;
@@ -173,7 +173,7 @@
   justify-content: flex-start;
   margin-left: 5%;
 }
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 420px), screen and (max-height: 375px) {
   .project:nth-child(even) {
     margin: 0 0 40px 0;
   }
@@ -183,7 +183,7 @@
   justify-content: flex-end;
   margin-left: -3%;
 }
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 420px), screen and (max-height: 375px) {
   .project:nth-child(odd) {
     margin: 0 0 40px 0;
   }
@@ -196,7 +196,7 @@
   font-size: 80px;
   margin-bottom: 100px;
 }
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 420px), screen and (max-height: 375px) {
   .projects_title {
     margin: 0;
     font-size: 50px;
@@ -216,7 +216,7 @@
   text-align: center;
   background-color: transparent;
 }
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 420px), screen and (max-height: 375px) {
   .project__link {
     font-size: 30px;
     margin: 30px;
@@ -247,7 +247,7 @@
   background-color: transparent;
   text-align: justify;
 }
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 420px), screen and (max-height: 375px) {
   .project__description {
     font-size: 22px;
   }
@@ -257,7 +257,7 @@
   width: 250px;
   height: intrinsic;
 }
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 420px), screen and (max-height: 375px) {
   .project__image {
     display: none;
   }
@@ -267,7 +267,7 @@
   padding-top: 20px;
   margin-left: 50px;
 }
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 420px), screen and (max-height: 375px) {
   .project_text_container {
     margin: 0 30px;
   }
@@ -294,12 +294,12 @@
   text-decoration: none;
   color: inherit;
 }
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 420px), screen and (max-height: 375px) {
   .links_container ul li {
     margin: 0 10px;
   }
 }
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 420px), screen and (max-height: 375px) {
   .links_container ul {
     margin: 0;
     width: 100%;
@@ -307,7 +307,7 @@
     text-align: center;
   }
 }
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 420px), screen and (max-height: 375px) {
   .links_container {
     margin: 0;
     text-align: center;
