--- a/src/styles/scss/components/_canvas.scss
+++ b/src/styles/scss/components/_canvas.scss
@@ -7,7 +7,7 @@
     display: flex;
     justify-content: flex-end;
 
-    @media screen and (max-width: 420px){
+    @media screen and (max-width: 420px), screen and (max-height: 375px){
         display: none;
     }
 }
